@@ -181,9 +181,9 @@ Nortel BayStack 5500 Series  |    XX    |    --    |    XX    |    ??    |   XX 
 -----------------------------|----------|----------|----------|----------|--------|
 Nortel ERS 2500 Series       |    XX    |    --    |    XX    |    ??    |   XX   |
 -----------------------------|----------|----------|----------|----------|--------|
-Nortel ERS 4500 Series       |    XX    |    --    |    XX    |    ??    |   XX   |
+Nortel ERS 4000 Series       |    XX    |    --    |    XX    |    ??    |   XX   |
 -----------------------------|----------|----------|----------|----------|--------|
-Nortel ERS 5500 Series       |    XX    |    --    |    XX    |    ??    |   XX   |
+Nortel ERS 5000 Series       |    XX    |    --    |    XX    |    ??    |   XX   |
 -----------------------------|----------|----------|----------|----------|--------|
 Nortel ES325                 |    XX    |    --    |    XX    |    ??    |   XX   |
 -----------------------------|----------|----------|----------|----------|--------|
