@@ -161,8 +161,8 @@
                            'Nortel::BayStack5500_6x' => 'Nortel BayStack 5500 w/ firmware 6.x',
                            'Nortel::BPS2000' => 'Nortel BPS 2000',
                            'Nortel::ERS2500' => 'Nortel ERS 2500 Series',
-                           'Nortel::ERS4500' => 'Nortel ERS 4500 Series',
-                           'Nortel::ERS5500' => 'Nortel ERS 5500 Series',
+                           'Nortel::ERS4000' => 'Nortel ERS 4000 Series',
+                           'Nortel::ERS5000' => 'Nortel ERS 5000 Series',
                            'Nortel::ERS5500_6x' => 'Nortel ERS 5500 w/ firmware 6.x',
                            'Nortel::ES325' => 'Nortel ES325',
                            'PacketFence' => 'PacketFence',
