@@ -60,6 +60,7 @@ Bug fixes
  * Fixes issues with accentuated characters and single quotes in some captive
    portal strings
  * Cisco C3560 now heritates the Cisco C2960 code
+ * Renaming Nortel ERS modules (#1238)
 
 --------------------------------------------------------------------------------
 Version <version> released on <releaseDate>
